# nanotation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nanotation/: __init__.py  annotations.py  app.py  histogram.py  mrc_io.py  napari_ui.py  plot3d.py  sessions.py  widgets.py
tests/: test_mrc_io.py  test_nanotation.py
